1998-10-20  Jim Kingdon

	Use the gzip library on the server.  Probably doesn't speed things
	up as currently implemented, but does avoid hassles in terms of
	finding an external gzip program.
	* zlib.c, server.h (gunzip_and_write, read_and_gzip): Now returns
	whether a fatal error occurred, rather than expecting error (1,
	...) to work.
	* client.c (update_entries, send_modified): Change callers.
	* server.c (receive_file): Rewrite gzip code to use
	gunzip_and_write rather than filter_through_gunzip.
	(server_updated): Likewise, use read_and_gzip rather than
	filter_through_gzip.
	* client.c, client.h (filter_through_gzip, filter_through_gunzip),
	run.c, cvs.h (filter_stream_through_program): Removed; no longer used.
	* sanity.sh (server): New tests server-4 and server-5 test
	this feature (note that CVS 1.10 also passes these tests; the
	behavior is supposed to be unchanged).

1998-10-19  Jim Kingdon

	* sanity.sh (multiroot3): New test, tests for a few more
	multiroot cases.

	* lock.c (lock_name): Set the permissions on each directory we
	create to that of the parent directory.
	* sanity.sh (lockfiles): New chmod and tests lockfiles-7a and
	lockfiles-7b test for this.  Adjust lockfiles-5 for new text of
	error message.

1998-10-15  Jim Kingdon

	* server.c (requests): Set RQ_ROOTLESS for "Set".
	* sanity.sh (info): Also clean up $HOME/.cvsrc.
	(server): Test that we can send Set before Root (had been tested
	by crerepos-6b, but only if you ran the info test first).  Tests
	for this fix.

1998-10-14  Jim Kingdon

	* subr.c (expand_string): Tweak the algorithm so that the size
	that it allocates is generally a power of two.

1998-10-14  Eivind Eklund and Jim Kingdon

	* commit.c (commit): For the client, don't worry about whether we
	are root.

1998-10-13  Jim Kingdon

	* server.h (struct request): Change status field to flags and add
	RQ_ROOTLESS.
	* client.c (handle_valid_requests, supported_request): Change
	status to flags.